# bkEvol

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README.mk  fitFun.cpp  installARMA.sh  installPyBind.sh  rd  requirements.txt  run.py  setup6.sh
chebMethod/: .gitignore  CMakeLists.txt  Makefile  compare.C
chebMethod/farm/: add.sh  jobs.sh  jobs.submit  run.sh
chebMethod/inc/: cheb.h  kernels.h  nodes.h
chebMethod/src/: cheb.cpp  integration.cpp  kernels.cpp  main.cpp  nodes.cpp  nonLin.cpp  one.cpp  solve.cpp  solveOne.cpp  tests.cpp
examples/: Makefile
examples/nb/: evol.ipynb
examples/py/: evol.py
examplesNb/: evol.ipynb
examplesPy/: evol.py
inc/: Fitter.h  Settings.h  Solver.h  gpuBooster.h  kernels.h  utils.h
plotting/: Makefile  compare.C  compareNew.C
src/: Fitter.cpp  Solver.cpp  alphaSpline.cpp  kernels.cpp  main.cpp  newKernels.cpp  pyBind.cpp
steer/: config.ini
test/: Makefile  convol.cpp  merge.cpp
